# saper_swateczny

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  vcpkg.json
src/: getcharindex.h  imgui_boilerplate.hpp  main.cpp  triangle.cpp  triangleVB.cpp
src/EditorClasses/: Camera.cpp  Camera.hpp  cmake_install.cmake  shapes.hpp
src/GamingClasses/: SpriteInstancing.cpp  SpriteInstancing.hpp
src/rendering/: CMakeLists.txt  CubeMap.cpp  CubeMap.hpp  FrameBuffer.cpp  FrameBuffer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Program.cpp  Program.hpp  SSBuffer.hpp  Shader.cpp  Shader.hpp  Texture2d.cpp  Texture2d.hpp  VertexBuffer.hpp  cmake_install.cmake  generators.h  glMathTypes.hpp  rr.cpp  rr.hpp
src/rendering/glad/include/glad/: gl.h
src/rendering/glad/src/: glad.c
src/shaders/: composite.frag.glsl  composite.vertex.glsl  skybox.frag.glsl  skybox.vertex.glsl  sprite.frag.glsl  sprite.vertex.glsl  triangle.frag.glsl  triangle.vertex.glsl
